# optic-ml

./: README.md  cabal.project
OpticML/: CHANGELOG.md  OpticML.cabal
OpticML/examples/: Demo.hs  Iris.hs  Main.hs
OpticML/examples/Playground/: Assorted.hs  ComponentTests.hs
OpticML/src/: OpticML.hs
OpticML/src/OpticML/: Components.hs  LensImpl.hs  Lenses.hs  Parametric.hs
OpticML/test/: Tests.hs
optic-ml/: CHANGELOG.md  LICENSE  optic-ml.cabal
optic-ml/src/: OpticML.hs
