cabal-version:      3.0
name:               OpticML
version:            0.0.0.1
synopsis:           Machine learning toolkit through profunctor optics

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Ethan Range
maintainer:         Ethan Range

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

library
    exposed-modules:  OpticML

    -- Modules included in this library but not exported.
    other-modules:
        OpticML.Lenses
        OpticML.LensImpl
        OpticML.Parametric
        OpticML.Components

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.4.0,
        hmatrix >= 0.20.2,
        normaldistribution,
        random
    
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options:
        -Wall -Weverything -Wcompat
        -Wno-unticked-promoted-constructors
        -Wno-name-shadowing
        -Wno-unused-do-bind
        -Wno-implicit-prelude
        -Wno-missing-import-lists
        -Wno-missing-local-signatures
        -Wno-safe
        -Wno-unsafe
        -Wno-missed-specialisations
        -Wno-all-missed-specialisations
        -Wno-incomplete-uni-patterns
        -Wno-missing-safe-haskell-mode
        -Wno-prepositive-qualified-module
        -Wno-unused-packages
        -Wno-missing-kind-signatures
        -Wno-implicit-lift

executable OpticML
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Iris
        Playground.Assorted
        Playground.ComponentTests

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        hmatrix >= 0.20.2,
        bytestring >= 0.11.3.1,
        cassava >= 0.5.3.0,
        vector >= 0.13.0.0,
        ansi-terminal >= 1.0,
        OpticML

    hs-source-dirs:   examples
    default-language: Haskell2010

    ghc-options: 
        -Wall -Weverything -Wcompat
        -Wno-unticked-promoted-constructors
        -Wno-name-shadowing
        -Wno-unused-do-bind
        -Wno-implicit-prelude
        -Wno-missing-import-lists
        -Wno-missing-local-signatures
        -Wno-safe
        -Wno-unsafe
        -Wno-missed-specialisations
        -Wno-all-missed-specialisations
        -Wno-incomplete-uni-patterns
        -Wno-missing-safe-haskell-mode
        -Wno-prepositive-qualified-module
        -Wno-unused-packages
        -Wno-missing-kind-signatures
        -Wno-implicit-lift

test-suite OpticML-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Tests.hs
    build-depends:    
        base ^>=4.16.4.0,
        tasty,
        tasty-hunit,
        matrix,
        OpticML

