cabal-version:      3.0
name:               optic-ml
version:            0.0.0.1
synopsis:           Machine learning toolkit through profunctor optics

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Ethan Range
maintainer:         Ethan Range

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

library
    exposed-modules:  OpticML

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable optic-ml
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        optic-ml

    hs-source-dirs:   examples
    default-language: Haskell2010

test-suite optic-ml-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Tests.hs
    build-depends:    base ^>=4.16.4.0
